<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.okuzminykh.assignmentfirstweek.data.FragmentViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id = "@+id/constrain_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.ThirdFragment">

            <TextView
                android:id="@+id/question7"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/question_artist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/answer7"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question7"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/question8"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/question_concert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answer7" />

            <RadioGroup
                android:id="@+id/answer8_options"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question8">

                <RadioButton
                    android:id="@+id/answer8_option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_yes" />

                <RadioButton
                    android:id="@+id/answer8_option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_no" />
            </RadioGroup>

            <TextView
                android:id="@+id/question9"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/question_periodicity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answer8_options" />

            <RadioGroup
                android:id="@+id/answer9_options"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question9">

                <RadioButton
                    android:id="@+id/answer9_option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_daily" />

                <RadioButton
                    android:id="@+id/answer9_option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_weekly" />

                <RadioButton
                    android:id="@+id/answer9_option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_monthly" />
            </RadioGroup>

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:text="@string/button_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answer9_options" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>